--- a/students/templates/students/student_list.html
+++ b/students/templates/students/student_list.html
@@ -40,7 +40,7 @@
             <td>{{ student.phone_number }}</td>
             <td>{{ student.address }}</td>
             <td>
-
+                <a href="{% url 'edit_student' student.id %} ">Edit</a>
             </td>
           </tr>
           {% endfor %}
