Fix edite sttudent and add role to user

--- a/students/templates/students/student_list.html
+++ b/students/templates/students/student_list.html
@@ -36,7 +36,7 @@
           <tr>
             <td>{{ student.id }}</td>
             <td>{{ student.last_name }} {{ student.first_name }}</td>
-            <td>{{ student.user.username }}</td>
+            <td>{{ student.user.role }}</td>
             <td>{{ student.phone_number }}</td>
             <td>{{ student.address }}</td>
             <td>
