update delete form

--- a/students/templates/students/student_list.html
+++ b/students/templates/students/student_list.html
@@ -41,6 +41,7 @@
             <td>{{ student.address }}</td>
             <td>
                 <a href="{% url 'edit_student' student.id %} ">Edit</a>
+                <a href="{% url 'delete_student' student.id %} ">Delete</a>
             </td>
           </tr>
           {% endfor %}
