--- a/instructors/templates/instructors/edit_instructor.html
+++ b/instructors/templates/instructors/edit_instructor.html
@@ -1,12 +1,12 @@
-<h2>Edit Student</h2>
+<h2>Edit Instructor</h2>
 <form method="post">
     {% csrf_token %}
 
     <h3>User Info</h3>
     {{ user_form.as_p }}
 
-    <h3>Student Info</h3>
-    {{ student_form.as_p }}
+    <h3>Instructor Info</h3>
+    {{ instructor_form.as_p }}
 
     <button type="submit">Save</button>
 </form>
