--- a/templates/base.html
+++ b/templates/base.html
@@ -13,14 +13,14 @@
 <body>
 
   <!-- Navbar -->
-  {% include 'navbar.html' %}
+  <!-- {% include 'navbar.html' %} -->
 
   <!-- Page Content -->
   <main class="container mt-4">
     {% block content %}
     {% endblock %}
   </main>
-  {% include 'footer.html' %}
+  <!-- {% include 'footer.html' %} -->
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   {% block extra_js %}{% endblock %}
