--- a/courses/templates/courses/category_list.html
+++ b/courses/templates/courses/category_list.html
@@ -36,6 +36,14 @@
           <svg class="bi pe-none me-2" width="16" height="16" aria-hidden="true">
             <use xlink:href="#home"></use>
           </svg>
+          Category
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link" aria-current="page">
+          <svg class="bi pe-none me-2" width="16" height="16" aria-hidden="true">
+            <use xlink:href="#home"></use>
+          </svg>
           Assignments
         </a>
       </li>
