--- a/courses/templates/courses/courses_list.html
+++ b/courses/templates/courses/courses_list.html
@@ -39,6 +39,14 @@
           Assignments
         </a>
       </li>
+      <li class="nav-item">
+        <a href="{% url 'category_list' %}" class="nav-link" aria-current="page">
+          <svg class="bi pe-none me-2" width="16" height="16" aria-hidden="true">
+            <use xlink:href="#home"></use>
+          </svg>
+          Categories
+        </a>
+      </li>
     </ul>
   </div>
   <div class="container">
