--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,15 @@
   <!-- {% include 'footer.html' %} -->
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    window.setTimeout(function() {
+      const alerts = document.querySelectorAll('.alert');
+      alerts.forEach(alert => {
+        const bsAlert = bootstrap.Alert.getOrCreateInstance(alert);
+        bsAlert.close();
+      });
+    }, 4000);
+  </script>
   {% block extra_js %}{% endblock %}
 </body>
 </html>
