Fix enrolled course

--- a/courses/templates/courses/student_course_list.html
+++ b/courses/templates/courses/student_course_list.html
@@ -56,39 +56,34 @@
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">#</th>
-          <th scope="col">Title</th>
-          <th scope="col">Category</th>
-          <th scope="col">Price</th>
-          <th scope="col">Date Enrolled</th>
-          <th scope="col">Action</th>
+          <th>#</th>
+          <th>Title</th>
+          <th>Category</th>
+          <th>Price</th>
+          <th>Date Enrolled</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody>
-        {% for course in enrolled_courses %}
+        {% for enrollment in enrollments %}
         <tr>
-          <td>{{ course.id }}</td>
-          <td>{{ course.title }}</td>
-          <td>{{ course.category.name }}</td>
-          <td>{{ course.price }}</td>
+          <td>{{ forloop.counter }}</td>
+          <td>{{ enrollment.course.title }}</td>
+          <td>{{ enrollment.course.category.name }}</td>
+          <td>{{ enrollment.course.price }}</td>
+          <td>{{ enrollment.date_enrolled|date:"Y-m-d" }}</td>
           <td>
-            {% for enrollment in course.enrollments.all %}
-            {% if enrollment.student == request.user.student %}
-            {{ enrollment.date_enrolled|date:"Y-m-d" }}
-            {% endif %}
-            {% endfor %}
-          </td>
-          <td>
-            <a href="" class="btn btn-info btn-sm">View</a>
+
           </td>
         </tr>
         {% empty %}
         <tr>
-          <td colspan="6">You are not enrolled in any courses yet.</td>
+          <td colspan="6">No enrolled courses yet.</td>
         </tr>
         {% endfor %}
       </tbody>
     </table>
+
 
     <h2>Course List</h2>
     <table class="table">
