--- a/dashboards/templates/dashboards/student_dashboard.html
+++ b/dashboards/templates/dashboards/student_dashboard.html
@@ -65,7 +65,6 @@
         </div>
 
         <!-- Dashboard Cards -->
-        <!-- Dashboard Cards -->
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <!-- My Courses -->
             <div class="col">
@@ -73,11 +72,9 @@
                     <div class="card-body">
                         <h5 class="card-title">My Courses</h5>
                         <ul class="list-group list-group-flush">
-                            {% for enrollment in enrolled_courses %}
+                            {% for course in enrolled_courses %}
                             <li class="list-group-item d-flex justify-content-between align-items-center">
-                                {{ enrollment.course.title }}
-                                <a href="{% url 'course_detail' enrollment.course.id %}"
-                                    class="btn btn-sm btn-outline-info">View</a>
+                                {{ course.title }}
                             </li>
                             {% empty %}
                             <li class="list-group-item">No courses enrolled.</li>
