--- a/courses/templates/courses/instructor_course_list.html
+++ b/courses/templates/courses/instructor_course_list.html
@@ -15,7 +15,7 @@
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item">
-        <a href="{% url 'instructor_dashboard' %}" class="nav-link" aria-current="page">
+        <a href="{% url 'dashboard' %}" class="nav-link" aria-current="page">
           <svg class="bi pe-none me-2" width="16" height="16" aria-hidden="true">
             <use xlink:href="#home"></use>
           </svg>
@@ -53,6 +53,7 @@
     </div>
     {% endif %}
     <h2>My Course</h2>
+    <a href="{% url 'create_course'%}" class="btn btn-primary">Create Course</a>
     <table class="table">
       <thead>
         <tr>
@@ -73,9 +74,10 @@
           <td>{{ course.price }}</td>
           <td>{{ course.created_at }}</td>
           <td>
-            <form method="post" action="{% url 'enroll' course.id %}">
+            <a href="{% url 'edit_course' course.id %}" class="btn btn-primary">Edit</a>
+            <form action="{% url 'delete_course' course.id %}" method="post" style="display:inline;">
               {% csrf_token %}
-              <button type="submit" class="btn btn-primary">Enroll</button>
+              <button type="submit" class="btn btn-danger">Delete</button>
             </form>
           </td>
         </tr>
