--- a/courses/templates/courses/student_course_list.html
+++ b/courses/templates/courses/student_course_list.html
@@ -15,7 +15,7 @@
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item">
-        <a href="{% url 'student_dashboard' %}" class="nav-link" aria-current="page">
+        <a href="{% url 'dashboard' %}" class="nav-link" aria-current="page">
           <svg class="bi pe-none me-2" width="16" height="16" aria-hidden="true">
             <use xlink:href="#home"></use>
           </svg>
